lesson6/k8s-log-processing/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: log-processing
spec:
  mtls:
    mode: STRICT
